========================
0.0.97
========================

- extended icon validator by adding support for `tic` keyword
- fixed link generator for email and phone numbers in `Markdown`
- improved `Number.pluralize()` method

========================
0.0.96
========================

- added `FlowStreamInstance.stats {Object}` property
- registered a new global variable `Total` - alias for `F`
- fixed generating `Message-ID` in SMTP sender
- fixed `CLEANUP()` method
- improved bookmarks in `Markdown`
- fixed `unit testing`
- fixed refreshing subscribers in Total.js Message Service

========================
0.0.95
========================

- added alias `Array.TfindIndex` (because some of NPM used their own)
- added `String.tslash()` method
- added `error` argument in the `jsonschemaobject.transform(data, partial, [error])` method
- removed `callback` argument in the `jsonschemaobject.transform(data, [callback], partial)` method
- added support for custom Route API actions
- fixed loading FlowStreams without identifiers
- fixed serializing TMS sources in the Flow module
- fixed `String.args()` for evaluting keys with `$` character
- fixed `ul` parsing in the Markdown parser
- added a new method `FlowInstance.remove()`
- improved exporting Flow schema
- extended `U.ls()` by adding `unified` argument
- added `FlowStreamComponentInstance.components {Object}`
- fixed `every` (e.g. `*/5`) value in the Cron
- fixed `#id` selector for `FlowStreamInstance.send()` method
- fixed loading the `default_root` configuration from the environment

========================
0.0.94
========================

- improved UI Builder compiler
- improved `FlowStream` initial header for WebSocket
- fixed loading `.html` plugins

========================
0.0.93
========================

- fixed internal FlowStream module (critical)

========================
0.0.92
========================

- updated Tangular template engine
- improved routing, actions can use `-->` instead of `* -->`