@@ -234,6 +234,29 @@ SchemaOptions.prototype = {
 
 var SchemaOptionsProto = SchemaOptions.prototype;
 
+SchemaOptionsProto.promisify = function(fn, a, b, c) {
+	var $ = this;
+	return new Promise(function(resolve) {
+
+		var callback = function(err, response) {
+			if (err)
+				$.invalid(err);
+			else
+				resolve(response);
+		};
+
+		if (c !== undefined)
+			fn(a, b, c, callback);
+		else if (b !== undefined)
+			fn(a, b, callback);
+		else if (a !== undefined)
+			fn(a, callback);
+		else
+			fn(callback);
+
+	});
+};
+
 SchemaOptionsProto.action = function(schema, data) {
 
 	var c = schema[0];
