@@ -20841,6 +20841,28 @@ Api.evaluate('TotalAPI,TAPI', function(opt, next) {
 	REQUEST(req);
 });
 
+global.PROMISIFY = function(fn, a, b, c) {
+	return new Promise(function(resolve, reject) {
+
+		var callback = function(err, response) {
+			if (err)
+				reject(err);
+			else
+				resolve(response);
+		};
+
+		if (c !== undefined)
+			fn(a, b, c, callback);
+		else if (b !== undefined)
+			fn(a, b, callback);
+		else if (a !== undefined)
+			fn(a, callback);
+		else
+			fn(callback);
+
+	});
+};
+
 UIDGENERATOR_REFRESH();
 require('./textdb-querybuilder');
 require('./sourcemap');
