@@ -5,6 +5,8 @@
 - extended icon validator by adding support for `tic` keyword
 - fixed link generator for email and phone numbers in `Markdown`
 - improved `Number.pluralize()` method
+- added `PROMISIFY(fn, [a], [b])` method
+- added `$.promisify(fn, [a], [b])` method
 
 ========================
 0.0.96
